# blogdrown

./: .dockerignore  .gitignore  Dockerfile  README.md  autotest.py
backend/: .gitignore  Cargo.toml  bacon.toml
backend/.cargo/: config.toml
backend/prisma/: schema.prisma
backend/prisma-cli/: Cargo.toml
backend/prisma/migrations/20241119051640_initial/: migration.sql
backend/prisma/migrations/20241119053714_join_tables/: migration.sql
backend/prisma/migrations/20241121220843_minor_fixes/: migration.sql
backend/seeds/: blogs.hurl  demouser.hurl  example1.md  gregtech.md  mark_insane.md  newblog.hurl  rust.hurl  rust.md  rust2.hurl  rust2.md  users.hurl
backend/src/: api.rs  auth.rs  bounded.rs  logger.rs  main.rs
backend/src/api/: blog.rs  comments.rs  follows.rs
backend/test/: blog.hurl  login.hurl  login2.hurl
front_dioxus/: Cargo.toml  Dioxus.toml  README.md
front_dioxus/assets/styling/: index.css
front_dioxus/src/: apitypes.rs  main.rs
front_dioxus/src/components/: mod.rs  navbar.rs
front_dioxus/src/views/: blog.rs  home.rs
frontend/: biome.jsonc  compress.py  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  rustAtHome.ts
frontend/src/components/: EditPost.tsx  Following.tsx  Loading.tsx  PostEditButtons.tsx  ResizingTextArea.tsx  markdown.ts
frontend/src/components/AuthorPage/: AuthorPage.tsx
frontend/src/components/BlogPost/: BlogPost.css  BlogPost.tsx  CommentBox.tsx
frontend/src/components/HomePage/: HomePage.tsx  index.css
frontend/src/components/Layout/: Layout.tsx  Modal.tsx  Session.ts  index.css
frontend/src/components/Navigation/: Navigation.css  Navigation.tsx  ProfileNav.tsx
frontend/src/components/NewPost/: NewPost.css  NewPost.tsx
frontend/src/store/: api.ts  blogs.ts  comments.ts  index.ts  session.ts  types.ts  users.ts
pstudio/: package.json  pnpm-lock.yaml
