[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
overflow-checks = true
lto = "thin"

[workspace]
resolver = "2"
members = ["prisma-cli"]


[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }

[dependencies]
axum = { version = "0.7.9", features = ["macros", "http2"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
axum-login = "0.16.0"
axum_csrf = { version = "0.10.1", features = ["layer"] }
chrono = "0.4.38"
prisma-client-rust = { workspace = true }
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v7"] }
